@@ -1,3 +1,6 @@
+rev 608 (2024-03-26) (krueschan)
+- minor change to country report title
+
 rev 607 (2024-03-26) (krueschan)
 - now allowing users to compare up to four countries/regions directly => extensive changes to country report output and its dependencies 
 
